# adaptation.bluetooth-tools

./: bluetooth-tools.manifest
debian/: changelog
mobile/scripts/: bt-stack-down.sh  bt-stack-up.sh
packaging/: bluetooth-tools.changes  bluetooth-tools.spec
scripts/: CMakeLists.txt  bt-dev-end.sh  bt-dev-start.sh  bt-edutm-dev-up.sh  bt-edutm-on.sh  bt-hci-logdump.sh  bt-reset-env.sh  bt-stack-down.sh  bt-stack-up.sh
scripts/mobile/: bt-reset-env.sh  bt-stack-down.sh
scripts/wearable/: bt-reset-env.sh  bt-stack-down.sh
wearable/debian/: changelog  rules
wearable/scripts/: CMakeLists.txt  bt-edutm-on.sh  bt-stack-down.sh  bt-stack-up.sh
